...
                    android:textColor="@color/black"
                    android:textSize="25dp"
                    android:textStyle="bold"
                    tools:ignore="SpUsage" />

                <EditText
                    android:id="@+id/departmentDetail"
                    android:layout_marginStart="5dp"
                    android:padding="5dp"
                    android:text=""
                    android:textColor="@color/black"
                    android:textSize="25dp"
                    tools:ignore="SpUsage"
...
        </TableLayout>


    </LinearLayout>

    <Button
        android:id="@+id/service_button_edit"
        android:layout_width="68dp"
        android:layout_height="65dp"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="22dp"
        android:layout_marginEnd="101dp"
...
