...

        <item
            android:id="@+id/nav_employee"
            android:icon="@drawable/baseline_person_24"
            android:title="@string/menu_employe" />
        <item
            android:id="@+id/nav_service"
            android:icon="@drawable/baseline_home_repair_service_24"
            android:title="@string/menu_service"
            android:visible="true"/>
        <item
            android:id="@+id/nav_site"
            android:icon="@drawable/baseline_location_pin_24"
            android:title="@string/menu_site"
            android:visible="true"/>

    </group>
</menu>
